# csb

./: .gitignore  MANIFEST.in  README.md  README_cn.md  install.bat  install.sh  pkg.bat  pkg.sh  pyinstaller_pkg.bat  pyinstaller_pkg.sh  pyproject.toml  requirements.dev.txt  requirements.txt
doc/cn/: deprecated_user_guide.md  local_lib_manager.md  user_guide.md
etc/: mugglec.yml  settings.xml
etc/metas/: googletest.yml  test.yml  test1.yml
etc/metas/googletest/: googletest.default.yml  googletest.docker.yml  googletest.yml
etc/metas/mugglec/: mugglec.yml
etc/metas/test/: test1.yml  test2.yml  test3.yml
examples/: deps.yml  echo.yml  hello.yml  inner_var.yml
examples/cmake/: common.cmake
examples/example01/: build.yml
examples/example01_hello/: hello.yml
examples/example02/: CMakeLists.txt  cmake_build.yml  meson.build  meson_build.yml
examples/example02_cmake/: CMakeLists.txt  build.yml
examples/example02_meson/: build.yml  meson.build
examples/example03_cmake/: CMakeLists.txt  build.yml
examples/example03_inner_var/: inner_var.yml
examples/example03_meson/: build.yml  meson.build
examples/example04_cmake/: CMakeLists.txt  build.yml
examples/example04_cmake/src/: hello.c
examples/example04_meson/: build.yml  meson.build
examples/example05_cmake/: CMakeLists.txt  build.yml
examples/example05_cmake/cmake/: foo.pc.in  fooConfig.cmake.in
examples/example05_cmake/foo/: foo.h  foo_config.h.in  foo_macro.h
examples/example05_cmake/foo/utils/: utils.c  utils.h
examples/example06_cmake/: CMakeLists.txt  build.yml
examples/example06_cmake/src/: hello.c
examples/example06_meson/: build.yml  meson.build
examples/example_0_hello/: CMakeLists.txt
examples/example_build_info/: CMakeLists.txt  build.yml  hpb_example.yml
examples/example_build_info/src/: main.cpp
examples/example_c_hello/: hpb_example.yml
examples/test/: test3.yml
hpb/: __init__.py  builder.py  builder_config.py  command_handle.py  downloader.py  kahn_algo.py  main.py  package_meta.py  packer.py  platform_info.py  ptree.py  repo_deps_handle.py  searcher.py  semver_handle.py  settings_handle.py  source_downloader.py  source_info.py  uploader.py  workflow_handle.py  workflow_yml.py  yaml_handle.py
hpb/command/: builder.py  dbsync.py  downloader.py  packer.py  searcher.py  uploader.py
hpb/component/: command_handle.py  db_handle.py  repo_deps_handle.py  settings_handle.py  source_downloader.py  var_replace_handle.py  workflow_handle.py
hpb/data_type/: build_info.py  builder_config.py  compiler_info.py  git_info.py  link_info.py  package_info.py  package_meta.py  platform_info.py  semver_item.py  source_info.py
hpb/etc/: settings.xml
hpb/mapper/: mapper_pkg.py
hpb/share/docker_img/: build.sh
hpb/share/metas/googletest/: googletest.Dockerfile  googletest.docker.yml
hpb/share/metas/mugglec/: mugglec.yml
hpb/tests/: test_kahn_algo.py  test_settings_handle.py
hpb/tests/etc/: test_settings1.xml
hpb/utils/: log_handle.py  singleton.py  utils.py
os/: build.sh  ubuntu.Dockerfile
res/googletest/: googletest.default.yml  googletest.json
scripts/: pkg_googletest.sh  pkg_mugglec.sh
scripts/pkg/: pkg_googletest.sh  pkg_googletest_docker.sh  pkg_mugglec.sh
share/docker_img/: Dockerfile  alpine.Dockerfile  build.sh  build_docker.yml  hpb_alpine.Dockerfile  hpb_ubuntu.Dockerfile
share/metas/: build_docker.yml
share/metas/googletest/: googletest.win.yml  googletest.yml
share/metas/mugglec/: mugglec.Dockerfile  mugglec.docker.yml  mugglec.win.yml  mugglec.yml
share/metas/mugglecpp/: mugglecpp.yml
share/modules/brotli/: brotli.yml
share/modules/c-ares/: c-ares.yml
share/modules/googletest/: googletest.yml
share/modules/mugglec/: mugglec.yml
share/modules/mugglecpp/: mugglecpp.yml
share/modules/openssl/: openssl.unix.yml
share/modules/zlib/: zlib.yml
share/modules/ztsd/: ztsd.yml
src/: builder.py  constant_var.py  downloader.py  log_handle.py  main.py  meta_handle.py  package_meta.py  packer.py  searcher.py  settings_handle.py  uploader.py  utils.py  yaml_handle.py
src/res/googletest/: googletest.Dockerfile  googletest.json
src/tests/: test_settings_handle.py
src/tests/etc/: test_settings1.xml  test_settings2.xml
tests/: test_kahn_algo.py  test_package_meta.py  test_platform_info.py  test_repo_deps_handle.py  test_semver_handle.py  test_settings_handle.py  test_source_info.py  test_var_replace_handle.py  test_workflow_handle.py
tests/etc/: settings.xml
tests/etc/test_package_meta/: hpb.yml
tests/etc/test_settings_handle/: settings1.xml  settings2.xml  settings_art.xml  settings_db.xml  settings_log.xml  settings_package.xml  settings_src.xml
tests/hpb/test_package_meta/: hpb.yml
tests/pkg/test_package_meta/: hpb.yml
tests/share/test_platform_info/: platform.yml
tests/share/test_source_info/: hpb.yml
