[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hpb"
version = "0.0.1"
authors = [
    {name="Muggle Wei", email="mugglewei@gmail.com"}
]
description = "Happy Package Builder"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[project.scripts]
hpb = "hpb.main:main"

[project.urls]
"Homepage" = "https://github.com/MuggleWei/hpb"
"Bug Tracker" = "https://github.com/MuggleWei/hpb/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["hpb"]
